--- a/深度学习入门/自学啃书/深度学习入门之神经网络.md
+++ b/深度学习入门/自学啃书/深度学习入门之神经网络.md
@@ -102,3 +102,165 @@ plt.show()
 ```
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/5bfd49b882c749159b90b448a05f7b5d.png)
 这里使用了numpy的maximum函数。maximum函数会从输入的数值中选择较大的那个值进行输出
+
+# 多维数组的运算
+掌握numpy多维数组的运算，就能高效的实现神经网络
+## 多维数组
+多维数组就是数字的集合，例如下面的一维数组
+
+```python
+import numpy as np
+A = np.array([1,2,3,4])
+print(np.ndim(A))
+print(A.shape)
+print(A.shape[0])
+```
+数组的维数可以通过np.ndim()函数获得，数组的形状通过实例变量shape获得
+
+```python
+B = np.array([[1,2],[3,4],[5,6]])
+print(np.ndim(B))
+print(B.shape)
+print(B.shape[0])
+```
+3×2的数组B表示第一个维度有3个元素，第二个维度有2个元素。二维数组也被称为矩阵，数组的横向排列称为行（row），纵向排列称为列（column）
+## 矩阵乘法
+线性代数的知识
+
+```python
+import numpy as np
+A = np.array([[1,2,3],[4,5,6]])
+B = np.array([[1,2],[3,4],[5,6]])
+print(np.dot(A,B))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/cd707201884f4bebb23f2544aead3de0.png)
+运行结果矩阵的形状是由矩阵A的行数和矩阵B的列数构成的
+
+# 3层神经网络的实现
+## 符号确认
+![在这里插入图片描述](https://img-blog.csdnimg.cn/bb200f0f648f4ef88c01eb1a645855fe.png)
+
+## 各层间信号传递的实现
+从输入层到第一层的第一个神经元的信号传递过程
+![在这里插入图片描述](https://img-blog.csdnimg.cn/0a5f3960a2004d7480b4b41ff937a4e1.png)
+$a_1^1$通过加权信号和偏置的和按如下方式进行计算：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/662a5b59653b4e5f979d33382c33d077.png)
+使用矩阵的乘法运算，可以将第一层的加权和表示成以下的式子：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/9c097964f3c241b4904bf6815ab07f8e.png)
+用numpy多维数组来实现式
+```python
+import numpy as np
+X = np.array([1.0,0.5])
+W1 = np.array([[0.1,0.3,0.5],[0.2,0.4,0.6]])
+B1 = np.array([0.1,0.2,0.3])
+
+print(W1.shape)
+print(X.shape)
+print(B1.shape)
+
+A1 = np.dot(X,W1)+B1
+print(A1)
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/c0656411f94f4f41a17c2f93fe837e05.png)
+
+## 代码实现小结
+
+```python
+import numpy as np
+
+def sigmoid(x):
+    return 1 / (1 + np.exp(-x))
+
+def identity_function(x):
+    return x
+
+def init_network():
+    network = {}
+    network['W1'] = np.array([[0.1,0.3,0.5],[0.2,0.4,0.6]])
+    network['b1'] = np.array([0.1,0.2,0.3])
+    network['W2'] = np.array([[0.1,0.4],[0.2,0.5],[0.3,0.6]])
+    network['b2'] = np.array([0.1,0.2])
+    network['W3'] = np.array([[0.1,0.3],[0.2,0.4]])
+    network['b3'] = np.array([0.1,0.2])
+
+    return network
+
+def forword(network,x):
+    W1,W2,W3 = network['W1'],network['W2'],network['W3']
+    b1,b2,b3 = network['b1'],network['b2'],network['b3']
+
+    a1 = np.dot(x,W1) + b1
+    z1 = sigmoid(a1)
+    a2 = np.dot(z1,W2) + b2
+    z2 = sigmoid(a2)
+    a3 = np.dot(z2,W3) + b3
+    y = identity_function(a3)
+
+    return y
+
+network = init_network()
+x = np.array([1.0,0.5])
+y = forword(network,x)
+print(y)
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/556c02a066fc4793b541bf7189e21ed0.png)
+init_network()函数会进行权重和偏置的初始化，并将其保存在字典变量network中，字典变量network中保存了每一层所需的参数（权重和偏置）。forward()函数中封装了将输入信号转换为输出信号的处理过程。
+# 输出层的设计
+神经网络可以用在分类问题和回归问题上，需要根据情况改输出层的激活函数。
+
+一般来说，回归问题用恒等函数，分类问题用softmax函数。
+## 恒等函数和softmax函数
+恒等函数对于输入的信息，会不加以任何改动地直接输出
+
+分类问题中使用的softmax函数可以用以下式表示
+![在这里插入图片描述](https://img-blog.csdnimg.cn/a632e4e319bc4d568c71cb873d8ed296.png)
+分子是输入信号$a_k$的指数函数，分母是所有输入信号的指数函数的和
+![在这里插入图片描述](https://img-blog.csdnimg.cn/446d13686c694e4f8bb030610a158f2c.png)
+
+```python
+import numpy as np
+
+a = np.array([0.3,2.9,4.0])
+exp_a = np.exp(a)
+print(exp_a)
+sum_exp_a = np.sum(exp_a)
+print(sum_exp_a)
+y = exp_a / sum_exp_a
+print(y)
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/7352c33b44ed4c0cb8e5e99282615867.png)
+修改成函数
+
+```python
+def softmax(a):
+    exp_a = np.exp(a)
+    sum_exp_a = np.sum(exp_a)
+    y = exp_a / sum_exp_a
+
+    return y
+```
+
+## 实现softmax函数时的注意事项
+ softmax函数在计算机运行上会出现溢出的缺陷，指数运算的值会变得很大，可以进行以下的修改：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/71d70be94f9042119c8c247e07d17ce0.png)
+```python
+def softmax(a):
+    c = np.max(a)
+    exp_a = np.exp(a-c)    # 溢出对策
+    sum_exp_a = np.sum(exp_a)
+    y = exp_a / sum_exp_a
+
+    return y
+```
+
+## softmax函数的特征
+```python
+a = np.array([0.3,2.9,4.0])
+y = softmax(a)
+print(y)
+print(np.sum(y))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/a1a5bb56ee534f77b71c19c6f058569b.png)
+softmax函数的输出是0.0到1.0之间的实数，并且softmax函数的输出值的总和为1，这也是该函数的一个重要性质，才可以把函数的输出解释为**概率**
+## 输出层的神经元数量
+根据待解决的问题来决定。对于分类问题，输出层的神经元数量一般设定为类别的数量。例如预测手写数字就是将输出层的神经元设定为10个。
