--- a/深度学习入门/自学啃书/深度学习入门之神经网络.md
+++ b/深度学习入门/自学啃书/深度学习入门之神经网络.md
@@ -264,3 +264,181 @@ print(np.sum(y))
 softmax函数的输出是0.0到1.0之间的实数，并且softmax函数的输出值的总和为1，这也是该函数的一个重要性质，才可以把函数的输出解释为**概率**
 ## 输出层的神经元数量
 根据待解决的问题来决定。对于分类问题，输出层的神经元数量一般设定为类别的数量。例如预测手写数字就是将输出层的神经元设定为10个。
+# 手写数字识别
+介绍完结构，来解决实际问题。进行手写数字图像的分类，先进行神经网络的推理处理，这个推理处理也称为神经网络的前向传播(forward propagation)
+## MNIST数据集
+MNIST数据集是由0到9的数字图像构成，训练图像有6万张，测试图像有1万张，这些图像可以用于学习和推理。一般是先用训练图像进行学习，再用学习到的模型度量能在多大程度上对测试图像进行正确的分类。
+
+```python
+# coding: utf-8
+try:
+    import urllib.request
+except ImportError:
+    raise ImportError('You should use Python 3.x')
+import os.path
+import gzip
+import pickle
+import os
+import numpy as np
+
+
+url_base = 'http://yann.lecun.com/exdb/mnist/'
+key_file = {
+    'train_img':'train-images-idx3-ubyte.gz',
+    'train_label':'train-labels-idx1-ubyte.gz',
+    'test_img':'t10k-images-idx3-ubyte.gz',
+    'test_label':'t10k-labels-idx1-ubyte.gz'
+}
+
+dataset_dir = os.path.dirname(os.path.abspath(__file__))
+save_file = dataset_dir + "/mnist.pkl"
+
+train_num = 60000
+test_num = 10000
+img_dim = (1, 28, 28)
+img_size = 784
+
+
+def _download(file_name):
+    file_path = dataset_dir + "/" + file_name
+    
+    if os.path.exists(file_path):
+        return
+
+    print("Downloading " + file_name + " ... ")
+    urllib.request.urlretrieve(url_base + file_name, file_path)
+    print("Done")
+    
+def download_mnist():
+    for v in key_file.values():
+       _download(v)
+        
+def _load_label(file_name):
+    file_path = dataset_dir + "/" + file_name
+    
+    print("Converting " + file_name + " to NumPy Array ...")
+    with gzip.open(file_path, 'rb') as f:
+            labels = np.frombuffer(f.read(), np.uint8, offset=8)
+    print("Done")
+    
+    return labels
+
+def _load_img(file_name):
+    file_path = dataset_dir + "/" + file_name
+    
+    print("Converting " + file_name + " to NumPy Array ...")    
+    with gzip.open(file_path, 'rb') as f:
+            data = np.frombuffer(f.read(), np.uint8, offset=16)
+    data = data.reshape(-1, img_size)
+    print("Done")
+    
+    return data
+    
+def _convert_numpy():
+    dataset = {}
+    dataset['train_img'] =  _load_img(key_file['train_img'])
+    dataset['train_label'] = _load_label(key_file['train_label'])    
+    dataset['test_img'] = _load_img(key_file['test_img'])
+    dataset['test_label'] = _load_label(key_file['test_label'])
+    
+    return dataset
+
+def init_mnist():
+    download_mnist()
+    dataset = _convert_numpy()
+    print("Creating pickle file ...")
+    with open(save_file, 'wb') as f:
+        pickle.dump(dataset, f, -1)
+    print("Done!")
+
+def _change_one_hot_label(X):
+    T = np.zeros((X.size, 10))
+    for idx, row in enumerate(T):
+        row[X[idx]] = 1
+        
+    return T
+    
+
+def load_mnist(normalize=True, flatten=True, one_hot_label=False):
+    """读入MNIST数据集
+    
+    Parameters
+    ----------
+    normalize : 将图像的像素值正规化为0.0~1.0
+    one_hot_label : 
+        one_hot_label为True的情况下，标签作为one-hot数组返回
+        one-hot数组是指[0,0,1,0,0,0,0,0,0,0]这样的数组
+    flatten : 是否将图像展开为一维数组
+    
+    Returns
+    -------
+    (训练图像, 训练标签), (测试图像, 测试标签)
+    """
+    if not os.path.exists(save_file):
+        init_mnist()
+        
+    with open(save_file, 'rb') as f:
+        dataset = pickle.load(f)
+    
+    if normalize:
+        for key in ('train_img', 'test_img'):
+            dataset[key] = dataset[key].astype(np.float32)
+            dataset[key] /= 255.0
+            
+    if one_hot_label:
+        dataset['train_label'] = _change_one_hot_label(dataset['train_label'])
+        dataset['test_label'] = _change_one_hot_label(dataset['test_label'])
+    
+    if not flatten:
+         for key in ('train_img', 'test_img'):
+            dataset[key] = dataset[key].reshape(-1, 1, 28, 28)
+
+    return (dataset['train_img'], dataset['train_label']), (dataset['test_img'], dataset['test_label']) 
+
+
+if __name__ == '__main__':
+    init_mnist()
+```
+
+使用脚本mnist.py，读入MNIST数据
+
+```python
+import sys, os
+sys.path.append(os.pardir)
+from mnist import load_mnist
+
+# 第一次调用会花费几分钟...
+(x_train,t_train),(x_test,t_test) = load_mnist(flatten=True,normalize=False)
+
+# 输出各个数据的形状
+print(x_train.shape)
+print(t_train.shape)
+print(x_test.shape)
+print(t_test.shape)
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/d54974c3d5c64c799d25f15f74038bac.png)
+使用PIL(Python Image Library)模块显示mnist图像
+
+```python
+import sys, os
+sys.path.append(os.pardir)
+import numpy as np
+from mnist import load_mnist
+from PIL import Image
+
+
+def img_show(img):
+    pil_img = Image.fromarray(np.uint8(img))
+    pil_img.show()
+
+(x_train,t_train),(x_test,t_test) = load_mnist(flatten=True,normalize=False)
+img = x_train[0]
+label = t_train[0]
+print(label)
+
+print(img.shape)
+img = img.reshape(28,28)
+print(img.shape)
+```
+flatten=True读入图像是以一维numpy数组形式保存，显示时要变为原来的28×28像素形状，比如通过reshape方法，fromarray()是将保存的numpy数组的图像数据转换为PIL用的数据对象
+## 神经网络的推理处理
