--- a/深度学习入门/自学啃书/深度学习入门之神经网络.md
+++ b/深度学习入门/自学啃书/深度学习入门之神经网络.md
@@ -442,3 +442,64 @@ print(img.shape)
 ```
 flatten=True读入图像是以一维numpy数组形式保存，显示时要变为原来的28×28像素形状，比如通过reshape方法，fromarray()是将保存的numpy数组的图像数据转换为PIL用的数据对象
 ## 神经网络的推理处理
+输入层有784(28×28)个神经元，输出层有10(0~9的10类别)个神经元
+此外这个神经网络有2个隐藏层，第一个隐藏层有50个神经元，第二个有100个神经元
+定义三个函数：
+
+```python
+def get_data():
+    (x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, flatten=True, one_hot_label=False)
+    return x_test, t_test
+
+
+def init_network():
+    with open("sample_weight.pkl", 'rb') as f:
+        network = pickle.load(f)
+    return network
+
+
+def predict(network, x):
+    W1, W2, W3 = network['W1'], network['W2'], network['W3']
+    b1, b2, b3 = network['b1'], network['b2'], network['b3']
+
+    a1 = np.dot(x, W1) + b1
+    z1 = sigmoid(a1)
+    a2 = np.dot(z1, W2) + b2
+    z2 = sigmoid(a2)
+    a3 = np.dot(z2, W3) + b3
+    y = softmax(a3)
+
+    return y
+```
+用这三个函数来实现神经网络的推理过程，并评价识别精度
+
+```python
+x, t = get_data()
+network = init_network()
+accuracy_cnt = 0
+for i in range(len(x)):
+    y = predict(network, x[i])
+    p= np.argmax(y) # 获取概率最高的元素的索引
+    if p == t[i]:
+        accuracy_cnt += 1
+
+print("Accuracy:" + str(float(accuracy_cnt) / len(x)))
+```
+
+## 批处理
+用来打包输入多张图片，例如输入100×784形状的数据，输出数据的形状为100×10，打包式的输入数据称为**批**(batch)
+
+```python
+x,t = get_data()
+network = init_network()
+
+batch_size = 100
+accuracy_cnt = 0
+for i in range(0,len(x),batch_size):
+    x_batch = x[i:i+batch_size]
+    y_batch = predict(network,x_batch)
+    p = np.argmax(y_batch,axis=1)
+    accuracy_cnt += np.sum(p == t[i:i+batch_size])
+
+print("Accuracy:" + str(float(accuracy_cnt) / len(x)))
+```
