--- a/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
+++ b/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
@@ -16,3 +16,86 @@
 机器学习中，一般将数据分为**训练数据**和**测试数据**两部分来进行学习和实验等。首先使用训练数据学习，寻找最优的参数，然后使用测试数据评价训练得到的模型的实际能力。之所以这样做就是追求模型的泛化能力，此外训练数据也可以称为监督数据。
 
 获得泛化能力是机器学习的最终目标。仅通过一个数据集去学习和评价参数，会导致对某个数据集过度拟合的**过拟合**状态。
+# 损失函数
+神经网络的学习通过某个指标表示现在的状态，然后以这个指标为基准，寻找最优权重参数。所用的指标称为**损失函数**(loss function)。这个损失函数可以使用任意函数，一般用均方误差和交叉熵误差
+## 均方误差
+可用作损失函数的函数有很多，其中最有名的是均方误差(mean squared error)
+![在这里插入图片描述](https://img-blog.csdnimg.cn/4f107167cdb643d2a0ec6ff7185c06d1.png)
+$y_k$表示神经网络的输出，$t_k$表示监督数据，$k$表示数据的维数
+均方误差会计算神经网络的输出和正确解监督数据的各个元素之差的平方，再求总和。
+```python
+def mean_squared_error(y,t):
+    return 0.5 * np.sum((y-t)**2)
+```
+实际计算
+```python
+import numpy as np
+
+def mean_squared_error(y,t):
+    return 0.5 * np.sum((y-t)**2)
+
+y = [0,0,1,0,0,0,0]
+t = [0.1,0.05,0.6,0.0,0.05,0.1,0.0]
+
+print(mean_squared_error(np.array(y),np.array(t)))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/3b5fd962b05940c1a31f9305f92e8b40.png)
+
+## 交叉熵误差
+交叉熵误差(cross entropy error)也经常被用作损失函数
+log表示以e为底的自然对数，$y_k$是神经网络的输出，$t_k$是正确解标签（~~我个人觉得$logy_k$写成$lny_k$更眼熟一点~~ ）
+![在这里插入图片描述](https://img-blog.csdnimg.cn/59bf836c90a142eba9d09a90ce5fa3a1.png)
+```python
+def cross_entropy_error(y,t):
+    delta = 1e-7
+    return -np.sum(t * np.log(y + delta))
+```
+计算np.log时，加上了一个微小值delta，防止负无限大的发生
+简单计算：
+
+```python
+def cross_entropy_error(y,t):
+    delta = 1e-7
+    return -np.sum(t * np.log(y + delta))
+
+y = [0,0,1,0,0,0,0]
+t = [0.1,0.05,0.6,0.0,0.05,0.1,0.0]
+
+print(cross_entropy_error(np.array(y),np.array(t)))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/ab971f7b3ed2465ebcafa0e1d4c2df09.png)
+
+## mini-batch学习
+机器学习使用训练数据进行学习，就是针对训练数据计算损失函数的值，找出使该值尽可能小的参数。所以计算损失函数时必须将所有的训练数据作为对象。
+
+之前的例子都是针对单个数据的损失函数，若要所有训练数据的损失函数的总和，以交叉熵误差为例，可以写成以下形式
+![在这里插入图片描述](https://img-blog.csdnimg.cn/892c18b9353141a885d8ff88ad3b3d44.png)
+$t_nk$表示第n个数据的第k个元素的值，式子看起来有点复杂，其实只是把求单个数据的损失函数的式扩大到了N份数据，不过最后还是要除以N进行正规化。这样就能得到单个数据的“平均损失函数”。通过这样的平均化，可以获得和训练数据的数量无关的统一指标。
+
+另外，MNIST数据集的训练数据有60000个，如果以全部数据为对象求损失函数的和，计算会花费很多时间，遇上几千万以上的数据量更难求。因此需要我们从全部数据中选出一部分，作为全体数据的“近似”。神经网络的学习就是从训练数据中选出一部分数据（称为mini-batch，小批量），然后对每个mini-batch进行学习。例如从60000个训练数据中随机选择100笔，再用这100笔数据进行学习。这种学习方式称为**mini-batch学习**
+
+读入MNIST数据集的代码：
+```python
+import sys,os
+sys.path.append(os.pardir)
+import numpy as np
+from dateset.mnist import load_mnist
+
+(x_train,t_train),(x_test,t_test) = \
+    load_mnist(normalize = True,one_hot_label = True)
+
+print(x_train.shape)  # (60000. 784)
+print(t_train.shape)  # (60000, 10)             
+```
+通过设定参数one_hot_label = True，可以得到one_hot表示（仅正确解标签为1，其余为0的数据结构），代码中的两行注释表示训练数据有60000个，输入数据是784维（28×28）的图像数据，监督数据是10维的数据。
+
+从这个训练数据中随机抽取10笔数据，可以使用numpy的np.random.choice()，写成如下形式：
+
+```python
+trian_size = x_train.shape[0]
+batch_size = 10
+batch_mask = np.random.choice(trian_size,batch_size)
+x_batch = x_train[batch_mask]
+t_batch = t_train[batch_mask]
+```
+使用np.random.choice()可以从指定的数字中随机选择想要的数字，可以得到一个包含被选数据的索引的数组，然后只需指定这些随机选出的索引，取出mini-batch，然后使用这个mini-batch计算损失函数即可。
