--- a/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
+++ b/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
@@ -99,3 +99,134 @@ x_batch = x_train[batch_mask]
 t_batch = t_train[batch_mask]
 ```
 使用np.random.choice()可以从指定的数字中随机选择想要的数字，可以得到一个包含被选数据的索引的数组，然后只需指定这些随机选出的索引，取出mini-batch，然后使用这个mini-batch计算损失函数即可。
+
+
+# 数值微分
+梯度法使用梯度的信息决定前进的方向
+## 导数
+导数表示的是某个瞬间的变化量，定义成以下的式子：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/fcda9f2e2bd84d5e8899d782867855fe.png)
+左边符号表示f(x)关于x的导数，即f(x)相对于x的变化程度
+
+```python
+# 不好的示例实现
+def numerical_diff(f,x):
+    h = 10e-50
+    return (f(x+h)-f(x))/h
+```
+这个函数有两个参数，函数 f 和传给函数 f 的参数 x ，这段代码两处地方需要改进，想把尽可能小的值赋给 h，所以采用了10e-50这个微小值，但会产生**舍入误差**。（因省略小数的精细部分的数值而造成最终的计算结果上的误差）
+![在这里插入图片描述](https://img-blog.csdnimg.cn/ba209ddb24374920a62a5af4e25c4b0c.png)
+如果用32位的浮点数来表示1e-50，就会变成0.0，无法正确表示，使用过小的值会造成计算上的问题，可以将h改成10^-4
+
+第二个要改进的地方与 f 的差分有关，真的导数对应函数在x处的斜率（切线），但在代码实现上是（x+h）和 x 之间的斜率，两者得到的导数值在严格意义上并不一致，这个差异的出现是因为 h 不可能无限接近0
+
+所以计算 f 在（x+h）和（x-h）之间的差分，也成为**中心差分**
+
+```python
+def numerical_diff(f,x):
+    h = 1e-4 # 0.0001
+    return (f(x+h)-f(x-h)) / (2*h)
+```
+## 数值微分的例子
+尝试用上述的数值微分对简单函数进行求导
+![在这里插入图片描述](https://img-blog.csdnimg.cn/fcdd5676851f4f52b8d810785bd21e7e.png)
+```python
+def func1(x):
+    return 0.01*x**2 + 0.1*x
+```
+绘制图像
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+x= np.arange(0.0,20.0,0.1)  # 0到20,0.1为单位
+y= func1(x)
+plt.xlabel("x")
+plt.ylabel("f(x)")
+plt.plot(x,y)
+plt.show()
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/2921156f11d44793a84539fa43c87068.png)
+来计算一下这个函数在x=5和x=10的导数
+
+```python
+print(numerical_diff(func1,5))
+print(numerical_diff(func1,10))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/5ab5f3abf627426ea00d1509b7a4a9df.png)
+得出的结果与真的导数误差极为小，基本上可以看作相等
+
+画出x=5的切线，完整代码如下：
+
+```python
+def numerical_diff(f,x):
+    h = 1e-4 # 0.0001
+    return (f(x+h)-f(x-h)) / (2*h)
+
+def func1(x):
+    return 0.01*x**2 + 0.1*x
+    
+
+import numpy as np
+import matplotlib.pyplot as plt
+
+x= np.arange(0.0,20.0,0.1)  # 0到20,0.1为单位
+y= func1(x)
+plt.xlabel("x")
+plt.ylabel("f(x)")
+
+
+def tangent_line(f, x):
+    d = numerical_diff(f, x)
+    print(d)
+    y = f(x) - d*x
+    return lambda t: d*t + y
+
+tf = tangent_line(func1, 5)
+y2 = tf(x)
+
+plt.plot(x,y)
+plt.plot(x,y2)
+plt.show()
+```
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/16b196c0f3d84cc8a6751f7ded7b3a1e.png)
+
+## 偏导数
+![在这里插入图片描述](https://img-blog.csdnimg.cn/22b431c898594eb6b49f68729196dabb.png)
+具有两个变量的函数
+
+```python
+def func2(x):
+    return x[0]**2 + x[1]**2
+```
+画一下这个函数的图像
+![在这里插入图片描述](https://img-blog.csdnimg.cn/4e1dafdad1a140f7b753ee8a432b0168.png)
+来求该函数的导数，但是式中有两个变量，所以要区分对$x_0$还是$x_1$进行求导数，此外将有多个变量的函数的导数称为**偏导数**，用数学式可以写成
+![在这里插入图片描述](https://img-blog.csdnimg.cn/ed3429b78107454786aea5a5bcef99ec.png)
+### 求解两个关于偏导数的例子
+#### 题目一
+![在这里插入图片描述](https://img-blog.csdnimg.cn/6825cbe1013449ee883de3341b5aa7f6.png)
+```python
+def numerical_diff(f,x):
+    h = 1e-4 # 0.0001
+    return (f(x+h)-f(x-h)) / (2*h)
+
+def func_t1(x0):
+    return x0*x0 + 4.0**2.0
+
+print(numerical_diff(func_t1,3.0))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/a84e1eb268dd44cc9e689d9da1cfa61e.png)
+#### 题目二
+![在这里插入图片描述](https://img-blog.csdnimg.cn/f5309d5bf86149cd8037e256c526aff1.png)
+
+```python
+def func_t2(x1):
+    return 3.0**2.0 + x1*x1  
+
+print(numerical_diff(func_t2,4.0))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/eb7832b106c747feae0aac7df0438b1d.png)
+与解析解的导数基本一致，偏导数与单变量的导数一样，都是求某个某个地方的斜率。不过偏导数需要将多个变量中的某一变量定为目标变量，并将其他变量固定为某个值。
