--- a/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
+++ b/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
@@ -230,3 +230,117 @@ print(numerical_diff(func_t2,4.0))
 ```
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/eb7832b106c747feae0aac7df0438b1d.png)
 与解析解的导数基本一致，偏导数与单变量的导数一样，都是求某个某个地方的斜率。不过偏导数需要将多个变量中的某一变量定为目标变量，并将其他变量固定为某个值。
+# 梯度
+上面的例子中计算了$x_0$和$x_1$的偏导数，而一起计算两个的偏导数
+![在这里插入图片描述](https://img-blog.csdnimg.cn/846cf10624114311b0ae4e7f8e4176d4.png)
+此外，像这样由全部变量的偏导数汇总而成的向量称为**梯度**(gradient)
+
+```python
+import numpy as np
+
+def numerical_gradient(f,x):
+    h = 1e-4 # 0.0001
+    grad = np.zeros_like(x)  # 生成和x形状相同的数组
+
+    for idx in range(x.size):
+        tmp_val = x[idx]
+        # f(x+h)的计算
+        x[idx] = tmp_val + h
+        fxh1 = f(x)
+
+        # f(x-h)的计算
+        x[idx] = tmp_val - h
+        fxh2 = f(x)
+
+        grad[idx] = (fxh1 - fxh2) / (2*h)
+        x[idx] = tmp_val # 还原值
+
+    return grad
+```
+函数numerical_gradient(f,x)执行的处理和求单变量的数值微分基本没有区别，参数 f 为函数，x为numpy数组，该函数对数组 x 的各个元素求数值微分。现在用它来求点（3，4），（0，2），（3，0）处的梯度
+
+```python
+print(numerical_gradient(func2,np.array([3.0,4.0])))
+print(numerical_gradient(func2,np.array([0.0,2.0])))
+print(numerical_gradient(func2,np.array([3.0,0.0])))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/151dccef4a8a41b99db3b90c11ae9884.png)
+![在这里插入图片描述](https://img-blog.csdnimg.cn/22b431c898594eb6b49f68729196dabb.png)
+将该函数的梯度画在图上
+
+```python
+# coding: utf-8
+# cf.http://d.hatena.ne.jp/white_wheels/20100327/p3
+import numpy as np
+import matplotlib.pylab as plt
+from mpl_toolkits.mplot3d import Axes3D
+
+def _numerical_gradient_no_batch(f, x):
+    h = 1e-4 # 0.0001
+    grad = np.zeros_like(x)
+    
+    for idx in range(x.size):
+        tmp_val = x[idx]
+        x[idx] = float(tmp_val) + h
+        fxh1 = f(x) # f(x+h)
+        
+        x[idx] = tmp_val - h 
+        fxh2 = f(x) # f(x-h)
+        grad[idx] = (fxh1 - fxh2) / (2*h)
+        
+        x[idx] = tmp_val # 还原值
+        
+    return grad
+
+def numerical_gradient(f, X):
+    if X.ndim == 1:
+        return _numerical_gradient_no_batch(f, X)
+    else:
+        grad = np.zeros_like(X)
+        
+        for idx, x in enumerate(X):
+            grad[idx] = _numerical_gradient_no_batch(f, x)
+        
+        return grad
+
+def function_2(x):
+    if x.ndim == 1:
+        return np.sum(x**2)
+    else:
+        return np.sum(x**2, axis=1)
+
+def tangent_line(f, x):
+    d = numerical_gradient(f, x)
+    print(d)
+    y = f(x) - d*x
+    return lambda t: d*t + y
+     
+if __name__ == '__main__':
+    x0 = np.arange(-2, 2.5, 0.25)
+    x1 = np.arange(-2, 2.5, 0.25)
+    X, Y = np.meshgrid(x0, x1)
+    
+    X = X.flatten()
+    Y = Y.flatten()
+    
+    grad = numerical_gradient(function_2, np.array([X, Y]) )
+    
+    plt.figure()
+    plt.quiver(X, Y, -grad[0], -grad[1],  angles="xy",color="#666666")#,headwidth=10,scale=40,color="#444444")
+    plt.xlim([-2, 2])
+    plt.ylim([-2, 2])
+    plt.xlabel('x0')
+    plt.ylabel('x1')
+    plt.grid()
+    plt.legend()
+    plt.draw()
+    plt.show()
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/5c1444840dad45f4866b9bce9fb7a8e6.png)
+如图该函数的梯度呈现为有向向量（箭头），指向了最低处。实际上梯度会指向各点处的函数值降低的方向。更严格的讲，**梯度指示的方向是各点处的函数值减小最多的方向**。（重要性质）
+## 梯度法
+机器学习的主要任务就是在学习中寻找**最优参数**（权重和偏置），这里的最优参数就是损失函数取最小值时的参数。但通常情况下损失函数很复杂，参数空间庞大，不知道在何处取最小值，只能通过巧妙使用梯度来寻找函数最小值（或者尽可能小的值）的方法就是梯度法。
+
+就如上面的重要性质讲的一样，梯度指示的方向是各点处的函数值减小最多的方向。所以无法保证梯度所指的方向就是函数的最小值或者真正应该前进的方向。实际上在复杂的函数中，梯度指示的方向基本上都不是函数值最小处。虽然梯度的方向并不一定指向最小值，但沿着它的方向能最大限度地减小函数的值。
+
+在梯度法中，函数的取值从当前位置沿着梯度方向前进一段距离，然后在新的地方重新求梯度，再沿着新梯度方向前进，如此反复，不断沿梯度方向前进，逐渐减少函数值的过程就是**梯度法**
