--- a/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
+++ b/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
@@ -344,3 +344,178 @@ if __name__ == '__main__':
 就如上面的重要性质讲的一样，梯度指示的方向是各点处的函数值减小最多的方向。所以无法保证梯度所指的方向就是函数的最小值或者真正应该前进的方向。实际上在复杂的函数中，梯度指示的方向基本上都不是函数值最小处。虽然梯度的方向并不一定指向最小值，但沿着它的方向能最大限度地减小函数的值。
 
 在梯度法中，函数的取值从当前位置沿着梯度方向前进一段距离，然后在新的地方重新求梯度，再沿着新梯度方向前进，如此反复，不断沿梯度方向前进，逐渐减少函数值的过程就是**梯度法**
+尝试用数学式来表示梯度法“
+![在这里插入图片描述](https://img-blog.csdnimg.cn/dd3d3e3a061d497d8cbde4e37dc8c778.png)
+$\eta$表示更新量，也称为学习率(learning rate)。学习率决定在一次学习中，应该学习多少，以及在多大程度上更新参数。
+
+上面的数学式表示更新一次的式子，这个步骤会反复执行，逐渐减少函数值。学习率需要事先确定为某个值，比如0.01或者0.001。为了达到合适的值，一般都会边改变值边确认学习是否正确进行。
+
+```python
+def gradient_descent(f,init_x,lr=0.01,step_num=100):
+    x = init_x
+
+    for i in range(step_num):
+        grad = numerical_gradient(f,x)
+        x -= lr * grad
+
+    return x
+```
+参数 f 是要进行最优化的函数，init_x是初始值，lr 是学习率，step_num是梯度法的重复次数。
+numerical_gradient(f,x)是之前的求函数梯度，用该梯度乘以学习率得到的值进行更新操作。
+
+使用这个函数可以求极小值
+![在这里插入图片描述](https://img-blog.csdnimg.cn/8d6874aa8d934776a8e8facdaa8fd5ba.png)
+```python
+def func2(x):
+    return x[0]**2 + x[1]**2
+
+init_x = np.array([-3.0,4.0])
+print(gradient_descent(func2,init_x=init_x,lr=0.1,step_num=100))
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/a4d86ca6b47e49f98b59bd18c984e48f.png)
+设置初始值为（-3.0，4.0），最终结果为（-6.1e-10，8.1e-10），非常接近（0，0），接近真的最小值。用图来表示梯度法的更新过程，原点处是最低的地方，函数的取值一点点在向其靠近。
+
+```python
+# coding: utf-8
+import numpy as np
+import matplotlib.pylab as plt
+from gradient_2d import numerical_gradient
+
+
+def gradient_descent(f, init_x, lr=0.01, step_num=100):
+    x = init_x
+    x_history = []
+
+    for i in range(step_num):
+        x_history.append( x.copy() )
+
+        grad = numerical_gradient(f, x)
+        x -= lr * grad
+
+    return x, np.array(x_history)
+
+
+def function_2(x):
+    return x[0]**2 + x[1]**2
+
+init_x = np.array([-3.0, 4.0])    
+
+lr = 0.1
+step_num = 20
+x, x_history = gradient_descent(function_2, init_x, lr=lr, step_num=step_num)
+
+plt.plot( [-5, 5], [0,0], '--b')
+plt.plot( [0,0], [-5, 5], '--b')
+plt.plot(x_history[:,0], x_history[:,1], 'o')
+
+plt.xlim(-3.5, 3.5)
+plt.ylim(-4.5, 4.5)
+plt.xlabel("X0")
+plt.ylabel("X1")
+plt.show()
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/a151eb36514a4aa0b966124c1f7748ca.png)
+学习率过大过小都会影响最后的结果
+```python
+init_x = np.array([-3.0,4.0])
+print(gradient_descent(func2,init_x=init_x,lr=10.0,step_num=100))   # 学习率为10
+print(gradient_descent(func2,init_x=init_x,lr=1e-10,step_num=100))  # 学习率为1e-10
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/6654c71b6bae495b98292fd478f401b5.png)
+![在这里插入图片描述](https://img-blog.csdnimg.cn/c5e9acd08d6749c3a8a9967e6aeb7b76.png)
+过大会发散为一个很大的值，学习率过小的话，基本上没更新就结束了。学习率这种**超参数**
+需要人工设定尝试多个值。
+## 神经网络的梯度
+神经网络的学习也要求梯度。这里的梯度是指损失函数关于权重参数的梯度。有一个形状为2*3的权重 W 的神经网络，损失函数用 $L$ 表示
+![在这里插入图片描述](https://img-blog.csdnimg.cn/fc0db28c95f947f0aadffe6725772a97.png)
+![在这里插入图片描述](https://img-blog.csdnimg.cn/62f1ce5a94fe42e48aac5597c868cfd9.png)
+的元素由各个元素关于 W 的偏导数构成。 例如第一行第一列元素表示当$w$ 11稍微变化时，损失函数 $L$ 会发生多大变化。
+
+下面以一个简单的神经网络为例，来实现求梯度的代码，为此实现一个名为 simpleNet 的类
+
+```python
+import sys, os
+sys.path.append(os.pardir)  # 为了导入父目录中的文件而进行的设定
+import numpy as np
+from common.functions import softmax, cross_entropy_error
+from common.gradient import numerical_gradient
+
+
+class simpleNet:
+    def __init__(self):
+        self.W = np.random.randn(2,3)
+
+    def predict(self, x):
+        return np.dot(x, self.W)
+
+    def loss(self, x, t):
+        z = self.predict(x)
+        y = softmax(z)
+        loss = cross_entropy_error(y, t)
+
+        return loss
+```
+这里使用了softmax和cross_entropy_error方法以及numerical_gradient方法。simpleNet类只有一个实例变量，即形状为2×3的权重参数。他有两个方法，一个是用于预测的predict(x)，另一个是用于求损失函数值的loss(x,t)。这里的参数x接收输入数据，t接收正确解标签
+
+```python
+def softmax(x):
+    if x.ndim == 2:
+        x = x.T
+        x = x - np.max(x, axis=0)
+        y = np.exp(x) / np.sum(np.exp(x), axis=0)
+        return y.T 
+
+    x = x - np.max(x) # 溢出对策
+    return np.exp(x) / np.sum(np.exp(x))
+
+def cross_entropy_error(y, t):
+    if y.ndim == 1:
+        t = t.reshape(1, t.size)
+        y = y.reshape(1, y.size)
+        
+    # 监督数据是one-hot-vector的情况下，转换为正确解标签的索引
+    if t.size == y.size:
+        t = t.argmax(axis=1)
+             
+    batch_size = y.shape[0]
+    return -np.sum(np.log(y[np.arange(batch_size), t] + 1e-7)) / batch_size
+
+def numerical_gradient(f, x):
+    h = 1e-4 # 0.0001
+    grad = np.zeros_like(x)
+    
+    it = np.nditer(x, flags=['multi_index'], op_flags=['readwrite'])
+    while not it.finished:
+        idx = it.multi_index
+        tmp_val = x[idx]
+        x[idx] = float(tmp_val) + h
+        fxh1 = f(x) # f(x+h)
+        
+        x[idx] = tmp_val - h 
+        fxh2 = f(x) # f(x-h)
+        grad[idx] = (fxh1 - fxh2) / (2*h)
+        
+        x[idx] = tmp_val # 还原值
+        it.iternext()   
+        
+    return grad
+```
+
+# 学习算法的实现
+复习一下神经网络的学习步骤：
+**前提**
+神经网络存在合适的权重和偏置，调整权重和偏置以便拟合训练数据的过程称为“学习”，神经网络的学习分为下面四个步骤：
+
+**步骤1(mini-batch)**
+从训练数据中随机选出一部分数据，这部分数据称为mini-batch。我们目标是减小mini-batch的损失函数的值
+
+**步骤2(计算梯度)**
+为了减少mini-batch的损失函数的值，需要求出各个权重参数的梯度。梯度表示损失函数的值减少最多的方向
+
+**步骤3(更新参数)**
+将权重参数沿梯度方向进行微小更新
+
+**步骤4(重复)**
+重复步骤1，步骤2，步骤3                                            
+
+这个学习方法通过梯度下降法更新参数，使用的数据是随机选择的mini batch数据，所以又称为随机梯度下降法(stochastic gradient descent)。一般由一个名为SGD的函数来实现。下面来实现手写数字识别的神经网络，这里以2层神经网络(隐藏层为1层的网络)为对象，使用MNIST数据集进行学习。
