--- a/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
+++ b/深度学习入门/自学啃书/深度学习入门之神经网络的学习.md
@@ -699,4 +699,4 @@ for i in range(iters_num):
         test_acc_list.append(test_acc)
         print("train acc, test acc | " + str(train_acc) + ", " + str(test_acc))
 ```
-之所以要计算每一个epoch的识别精度，是因为如果for语句的循环中一只计算识别精度，会花费太多时间。并且也没有必要频繁记录识别精度，所以才会经过一次rpoch就记录一次训练数据的识别精度。
+之所以要计算每一个epoch的识别精度，是因为如果for语句的循环中一只计算识别精度，会花费太多时间。并且也没有必要频繁记录识别精度，所以才会经过一次epoch就记录一次训练数据的识别精度。
