--- a/基础知识/进阶速通.md
+++ b/基础知识/进阶速通.md
@@ -1,9 +1,75 @@
 # 公式
 ## 公式
+- 在程序中，函数是组织好的，可重复使用的，用于实现单一或相关联功能的代码段
+- 函数能提高应用的模块性，和代码的重复利用率
 
 ## 函数
+- 内建函数
+    - 基础函数：print, input等
+    - 高阶函数map, reduce等
+- 用户自定义函数：通过def, lambda等关键字构造的函数
+- 第三方工具包中的函数
+
+### 返回值
+return返回函数计算的结果，可以是具体的值，公式，函数等
+- 返回值不是必须的，如果函数中没有return，则默认返回None
+- 返回值可以是多个，例如return a b c（实际上会被当成一个元组返回）
+
+return标志着一个函数的结束
+
+### 函数体
+是函数实现功能的主要部分
+- 函数体部分要进行缩进
+- 是对某种功能代码的实现
+- pass 占位符，没有实际意义
+- 函数体中可以继续定义函数
+
+### 进击的参数
+#### 必备参数
+必须以正确的形式传入参数，调用时的数量必须和声明是的一样
+```
+function(a,b)
+```
+#### 关键字参数
+函数调用时使用等号赋值形式传入参数
+```
+function(a=1,b=2)
+```
+#### 默认参数
+调用函数时，缺省参数的值没有如果没有传入，则被认为是默认值
+```
+def function(a=1,b=2):
+    pass
+function()  # 此时使用
+a=1,b=2
+```
+#### 不定长参数
+一个函数能处理比当初声明时更多的参数，这些参数叫不定长参数，声明时不会命名。*args，**kwargs：加了*的变量args会存放所有未命名的变量参数。args为元组.
+
+加**的变量kwargs会存放命名参数，即形如key=value的参数，kwargs为字典
+```
+def function(*args):
+    pass
+function(1,2,3,4,5)
+```
+#### 参数位置
+def func(必备参数，关键字参数，默认参数，不定长参数)
+
+#### 变量
+- 定义在脚本中的变量为全局变量（脚本中可以都使用）
+- 定义在函数、类内部的变量为局部变量（离开函数不能再使用）
+- 如果变量重名，在函数内部优先使用局部变量
+- 当函数中要使用的变量就是全局变量时，可以通过关键字global使用
+```
+name = "pico"
+def func():
+    global name
+    print("my name is %s"%(name))
+func()
+```
 
 # 匿名函数
+
 
 ## 函数特点
 
