--- a/基础知识/入门速通.md
+++ b/基础知识/入门速通.md
@@ -71,8 +71,64 @@ L2:[6,2,3,4,5]
 算术、比较、赋值、逻辑、位、成员、身份运算符
 
 ## 数据结构基础
+### 顺序存储结构
+特点：用物理相邻的位置关系表示其逻辑关系
+
+### 链式存储结构
+每一数据元素均使用一个节点来存储，不仅存储数据本身，还需存储数据元素之间的逻辑关系。
+
+数据域存储数据本身，指针域存储下一节点的地址
+
+### 树形结构
+一个或多个节点的有限集合，也是一种非线性结构
+
+### 图结构
+- 顶点(vertex)
+    - 图中的数据元素
+- 边(edge)
+    - 图中连接这些顶点的线
+
+### 哈希存储结构
+依据数据元素的关键字，通过事先设计好的哈希函数计算出一个值，再将其作为数据元素的存储地址，因此使用哈希存储结构也可以实现快速的查找。
+
+只需要存储数据元素，不需要存储数据元素之间的关系
+
+### 堆和栈
+- 栈：后进先出
+- 堆：是一种经过排序的树形结构。每个节点都有一个值，特点是根节点的值最小（或最大），且根节点的两个字数也是一个堆
+
+### 队列
+特殊的线性表，特殊之处在于只允许在表的前端进行删除操作，在表的后端进行插入操作
 
 # 如果和复读机
 ## 判断
+- 使用隐式的判断条件
+- 将最可能出现的判断放在前面
+- 避免深层次的判断嵌套
+- 避免无意义的判断
 
 ## 循环
+python里的for循环与其它语言不一样，需要接收一个对象作为参数每次迭代其中一个元素
+
+使用continue实现跳过当前循环的剩下语句，然后进行下一轮的循环
+
+使用break结束整个循环（循环对应的else也不会执行）
+
+12以内乘法表，尝试添加continue和break区别
+```python
+for i in range(1,13):
+    for j in range(1,i+1):
+        print("%s * %s = %d"%(j,i,i*j))
+```
+### 空循环和死循环
+- 空循环：在循环在循环体是空的，不执行任何任务
+    - 会导致系统CPU占用高
+    - 浪费计算资源
+```
+while True:
+    pass
+```
+
+## 递归
+程序调用自身的编程技巧称为递归，通常把一个大型的复杂问题转化为一个与原问题相似的规模较小的问题来解决
+
