--- a/基础知识/进阶速通.md
+++ b/基础知识/进阶速通.md
@@ -69,11 +69,91 @@ func()
 ```
 
 # 匿名函数
+- lambda只有一个表达式，函数体比def简单的很多
+- lambda不是一个代码块，仅仅能在lambda表达式中封装有限的逻辑进去
+- lambda拥有自己的命名空间，且不能访问自有参数列表之外或全局命名空间里的参数
 
+定义匿名函数
+```
+# lambda 参数:函数体
+lambda x:x+1
+```
+让代码更简洁
+- 实现功能，输出x的二次方三次方四次方
+```
+x = 3
+I = [lambda x:x**2,lambda x:x**3,lambda x:x**4]
+for i in I:
+    print(i(x))
+```
 
 ## 函数特点
+- 函数本身可以作为参数和返回值
+- python程序执行的过程
+    - 自上而下
+    - 函数体在调用时才会被执行
+
+### 函数式编程
+- 函数就是面向过程的程序设计的基本单元
+- 函数式编程思想更接近数学计算
+- 函数式编程就是一种抽象程度很高的编程范式
+- 函数式编程的一个特点就是，允许把函数本身作为参数传入另一个函数，还允许返回一个函数
+- Python 对函数式编程提供部分支持。
 
 ## 高阶函数
+特点：
+- 变量可以指向函数
+- 可以传入函数
+```
+def add(x,y,f):
+    return f(x)+f(y)
+
+print(add(3,-5,abs))
+```
+### map函数
+接收两个参数，一个是函数，一个是lterable对象
+
+map将传入的函数依次作用到序列的每个元素，并把结果作为新的lterator返回
+```
+def f(x):
+    return x ** 2
+
+r = map(f,[1,2,3,4,5,6])
+print(list(r))
+```
+### reduce函数
+- 接收两参数
+- 把结果继续和序列的下一个元素做累积运算
+
+reduce(f,[x1,x2,x3,x4])=f(f(f(f(x1,x2),x3),x4)
+
+```
+from functools import reduce
+
+def f1(x,y):
+    return x * 10 + y
+
+print(reduce(f1,[1,2,3,4,5]))
+```
+### filter函数
+- 用于过滤序列，接收一个参数和一个序列
+- filter()把传入的函数依次作用于每个元素，然后根据返回值是true还是false选择保留还是丢弃该元素
+
+```
+def not_empty(s):
+    return s and s.strip()
+
+print(list(filter(not_empty,['A',"",'B',None,'C',''])))
+```
+### sorted函数
+- 排序也是在程序中经常用到的算法。无论使用冒泡排序还是快速排序，排序的核心是比较两个元素的大小
+- 比较的过程必须通过函数抽象出来。Python内置的sorted() 函数就可以对list进行排序
+- sorted()函数也是一个高阶函数，它还可以接收一个key函数来实现自定义的排序
+- 对字符串排序，是按照ASCII的大小比较的
+
+```
+print(sorted(['Zoo','about','kokomi','Credit'],key = str.lower))
+```
 
 # 对象
 ## 给个对象
